  In particular, the following wrappers for procedures listed in section
  B.1.2 were added:
  - Item 6: `MPI_Isendrecv`, `MPI_Isendrecv_replace`
  - Item 7: persistent collectives and persistent neighborhood collectives
  - Item 9: partitioned communication
  - Item 13: `MPI_Comm_idup_with_info`
  - Item 22: `MPI_Info_get_string`
  - Item 24: Sessions model
  - Item 25: `MPI_Info_create_env`

User tools and API improvements and changes:

- Support for the online access interface was removed.
- Support for NEC and Sun compilers was removed.
- Improvement of `SCOREP_CUDA_ENABLE` options to include implicit
  dependencies and define a default in line with the overall
  measurement strategy of Score-P. Check `scorep-info` for more
  information.
- Lustre stripe I/O handle attributes now also support Lustre
  Progressive File Layouts (PFL). The `Number of Extents` attribute
  holds the number of components. `Extent Begin` holds the extent
  begin offsets. This and the existing `Stripe Count` and `Stripe
  Size` attributes are now a comma separated list of values. Some
  values can also be constants like `DEFAULT` or `WIDE`.
- Deprecate measurements without extended non-blocking communication events.

Compatibility:

- Score-P now requires a shared or PIC libbfd. Therefore, the
  configure option --with-libbfd now also accepts 'download' to
  download, build and install a libbfd at make time.
- Address-to-line lookup now requires the availability of
  dl_iterate_phdr from link.h where previously /proc/self/maps was
  parsed. In addition, symbols from dlopened shared libraries are
  considered if linker auditing is available and the LD_AUDIT
  environment variable is set to
  <prefix>/lib[/backend]/libscorep_rtld_audit.so when executing an
  instrumented binary.
- The C++ compiler requirements to build Score-P were raised from
  C++98 to C++11.
- For building scorep-score, use CC and CXX provided by cubelib-config